fixing bug on mobile

--- a/styles.css
+++ b/styles.css
@@ -144,6 +144,7 @@ footer a {
     justify-content: center;
     align-items: center;
     height: 50vh;
+    width: 100%;
     overflow-x: none;
   }
 
